fix: illustrated respite overflowing

--- a/src/style.css
+++ b/src/style.css
@@ -12,131 +12,9 @@ body {
   --main-color-2: #5C1BAF;
   --main-color-2-translucid: #5C1BAF99;
 
-  background-color: white;
-  color: black;
-  /* height: 100vh; */
-  /* height: calc(var(--vh, 1vh) * 100); */
-  width: 100vw;
+  background-color: grey;
+  align-items: flex-start;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-}
-
-/* Envólucro */
-.burguer_menu_wrapper {
-  --zindex-position: 9999;
-  --bar-color: white;
-
-  display: flex;
-  position: fixed;
-  top: 1%;
-  left: 1%;
-}
-
-/*Botão*/
-.burger_button {
-  background-color: var(--main-color-0-translucid);
-  backdrop-filter: blur(2px);
-  border-radius: 0.2em;
-  border: 1px outset var(--main-color-0-translucid);
-  box-shadow: 0px 0px 2px #0009;
-  
-  display: block;
-  height: fit-content;
-  width: fit-content;
-
-  cursor: pointer;
-}
-
-.burger_button:hover {
-  background-color: var(--main-color-2-translucid);
-}
-
-.bar {
-  background-color: var(--bar-color);
-  
-  width: 1.6rem;
-  height: 0.2rem;
-  margin: 5px 5px;
-  transition: all 0.5s ease-out;
-}
-
-.burger_button.active .bar:nth-child(1) {
-  transform: translateY(0.75em) rotate(-45deg);
-}
-
-.burger_button.active .bar:nth-child(2) {
-  opacity: 0%;
-}
-
-.burger_button.active .bar:nth-child(3) {
-  opacity: 0%;
-}
-
-.burger_button.active .bar:nth-child(4) {
-  transform: translateY(-0.75em) rotate(45deg);
-}
-
-/* Menu de opções */
-
-.dropdown_menu {
-  color: white;
-  background-color: var(--main-color-0-translucid);
-  backdrop-filter: blur(5px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 0.2em;
-
-  padding: 10px;
-  width: fit-content;
-
-  opacity: 0;
-  transform: translate(-10rem, -9rem) scale(0);
-  transition: all 0.5s ease-in;
-
-  max-width: 18rem;
-  z-index: var(--zindex-position);
-}
-
-.dropdown_menu:hover {
-  background-color: var(--main-color-2-translucid);
-}
-
-.dropdown_menu ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: fit-content;
-  list-style: none;
-}
-
-.dropdown_menu li {
-  border: 1px solid var(--main-color-1-translucid);
-  border-radius: 0.2rem;
-
-  margin: 10px 0;
-  width: 100%;
-
-  overflow: break-word;
-  text-align: center;
-}
-
-.dropdown_menu li:hover {
-  background-color: var(--main-color-1-translucid);
-}
-
-.dropdown_menu a {
-  color: var(--bar-color);
-  text-decoration: none;
-  
-  display: block;
-  padding: 10px;
-}
-
-.dropdown_menu.active {
-  opacity: 100%;
-
-  display: flex;
-
-  transform: translate(0rem, 0rem) scale(1);
-  transition: all 0.5s ease-in;
+  width: 100vw;
 }
